# mainstay

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  setup-tests.sh  version-bump.sh
.github/: issue_template.md
.github/workflows/: no-caching-tests.yaml  reusable-tests.yaml  tests.yaml
avm/: Cargo.toml
avm/src/: lib.rs  main.rs
bench/: BINARY_SIZE.md  COMPUTE_UNITS.md  STACK_MEMORY.md
cli/: Cargo.toml
cli/npm-package/: mainstay.js  package.json
cli/src/: checks.rs  config.rs  lib.rs  rust_template.rs  solidity_template.rs
client/: Cargo.toml
client/example/: Cargo.toml  run-test.sh
client/example/src/: blocking.rs  main.rs  nonblocking.rs
client/src/: blocking.rs  lib.rs  nonblocking.rs
docker/: Makefile
docs/: README.md  package-lock.json  package.json
examples/tutorial/: package.json
idl/: Cargo.toml
idl/spec/: Cargo.toml
idl/src/: build.rs  convert.rs  lib.rs
lang/: Cargo.toml
lang/attribute/access-control/: Cargo.toml
lang/attribute/access-control/src/: lib.rs
lang/attribute/account/: Cargo.toml
lang/attribute/account/src/: id.rs  lazy.rs  lib.rs
lang/attribute/constant/: Cargo.toml
lang/attribute/constant/src/: lib.rs
lang/attribute/error/: Cargo.toml
lang/attribute/error/src/: lib.rs
lang/attribute/event/: Cargo.toml
lang/attribute/event/src/: lib.rs
lang/attribute/program/: Cargo.toml
lang/attribute/program/src/: lib.rs
lang/attribute/program/src/declare_program/: common.rs  mod.rs
lang/attribute/program/src/declare_program/mods/: accounts.rs  client.rs  constants.rs  cpi.rs  events.rs  internal.rs  program.rs  types.rs  utils.rs
lang/derive/accounts/: Cargo.toml
lang/derive/accounts/src/: lib.rs
lang/derive/serde/: Cargo.toml
lang/derive/serde/src/: lazy.rs  lib.rs
lang/derive/space/: Cargo.toml
lang/derive/space/src/: lib.rs
lang/src/: bpf_upgradeable_state.rs  context.rs  error.rs  event.rs  idl.rs  lazy.rs  lib.rs  system_program.rs
lang/src/accounts/: account.rs  account_loader.rs  interface.rs  interface_account.rs  lazy_account.rs  program.rs  sysvar.rs
lang/syn/: Cargo.toml
lang/syn/src/: lib.rs
lang/syn/src/codegen/: error.rs
lang/syn/src/codegen/accounts/: __client_accounts.rs  __cpi_client_accounts.rs  bumps.rs  constraints.rs  exit.rs  to_account_infos.rs  to_account_metas.rs  try_accounts.rs
lang/syn/src/codegen/program/: accounts.rs  cpi.rs  dispatch.rs  entry.rs  handlers.rs  idl.rs  instruction.rs
lang/syn/src/idl/: accounts.rs  address.rs  common.rs  constant.rs  defined.rs  error.rs  event.rs  external.rs  program.rs
lang/syn/src/parser/: context.rs
lang/syn/src/parser/accounts/: constraints.rs
lang/syn/src/parser/program/: instructions.rs
lang/tests/: generics_test.rs  macros.rs  serialization.rs  space.rs
spl/: Cargo.toml
spl/src/: associated_token.rs  dex.rs  governance.rs  idl_build.rs  lib.rs  memo.rs  metadata.rs  mint.rs  stake.rs  token.rs  token_2022.rs  token_interface.rs
tests/: package.json
tests/bench/: README.md  package.json
tests/bench/programs/bench/: Cargo.toml
tests/bench/programs/bench/src/: lib.rs
tests/bpf-upgradeable-state/: package.json
tests/cashiers-check/: package.json
tests/cfo/: Anchor.toml  package.json
tests/chat/: package.json
tests/composite/: package.json
tests/composite/programs/composite/: Cargo.toml
tests/composite/programs/composite/src/: lib.rs
tests/cpi-returns/: package.json
tests/cpi-returns/programs/caller/: Cargo.toml
tests/cpi-returns/programs/caller/src/: lib.rs
tests/custom-coder/: package.json
tests/custom-coder/programs/native-system/: Cargo.toml
tests/custom-coder/programs/native-system/src/: lib.rs
tests/declare-id/: package.json
tests/declare-id/programs/declare-id/: Cargo.toml
tests/declare-id/programs/declare-id/src/: lib.rs
tests/declare-program/: package.json
tests/docs/: package.json
tests/docs/programs/docs/: Cargo.toml
tests/docs/programs/docs/src/: lib.rs
tests/errors/: package.json
tests/escrow/: package.json
tests/events/: package.json
tests/floats/: package.json
tests/floats/programs/floats/: Cargo.toml
tests/floats/programs/floats/src/: lib.rs
tests/idl/: generate.sh  package.json  test.sh
tests/idl/programs/generics/: Cargo.toml
tests/idl/programs/generics/src/: lib.rs
tests/ido-pool/: package.json
tests/lockup/: package.json
tests/lockup/programs/lockup/: Cargo.toml
tests/lockup/programs/lockup/src/: lib.rs
tests/lockup/programs/registry/: Cargo.toml
tests/lockup/programs/registry/src/: lib.rs
tests/mainstay-cli-account/: package.json
tests/mainstay-cli-idl/: package.json  test.sh
tests/mainstay-cli-idl/programs/idl-commands-one/: Cargo.toml
tests/mainstay-cli-idl/programs/idl-commands-one/src/: lib.rs
tests/mainstay-cli-idl/programs/idl-commands-two/: Cargo.toml
tests/mainstay-cli-idl/programs/idl-commands-two/src/: lib.rs
tests/mainstay-house/: package.json
tests/misc/: ci.sh  miscNonRentExempt.ts  package.json
tests/misc/programs/overflow-checks/: Cargo.toml
tests/misc/programs/overflow-checks/src/: lib.rs
tests/misc/programs/remaining-accounts/: Cargo.toml
tests/misc/programs/remaining-accounts/src/: account.rs  context.rs  lib.rs
tests/multiple-suites/: package.json
tests/multiple-suites-run-single/: package.json
tests/multiple-suites-run-single/programs/multiple-suites-run-single/: Cargo.toml
tests/multiple-suites-run-single/programs/multiple-suites-run-single/src/: lib.rs
tests/multisig/: package.json
tests/optional/: package.json
tests/optional/programs/optional/: Cargo.toml
tests/optional/programs/optional/src/: account.rs  context.rs  lib.rs
tests/pda-derivation/: package.json
tests/pyth/: package.json
tests/realloc/: package.json
tests/realloc/programs/realloc/: Cargo.toml
tests/realloc/programs/realloc/src/: lib.rs
tests/relations-derivation/: package.json
tests/safety-checks/: test.sh
tests/solang/: .gitignore  .prettierignore  (+1 more)
ts/: build-packages.sh  package-lock.json  package.json
(+294 files in other folders)
