[package]
name = "mainstay-cli"
version = "0.30.0"
authors = ["Mainstay Maintainers <accounts@200ms.io>"]
edition = "2021"
repository = "https://github.com/nxpkg/mainstay"
description = "Mainstay CLI"
license = "Apache-2.0"

[[bin]]
name = "mainstay"
path = "src/bin/main.rs"

[features]
dev = []

[dependencies]
mainstay-client = { path = "../client", version = "0.30.0" }
mainstay-lang-idl = { path = "../idl", version = "0.1.0", features = ["build", "convert"] }
mainstay-lang = { path = "../lang", version = "0.30.0" }
anyhow = "1.0.32"
base64 = "0.21"
bincode = "1.3.3"
cargo_toml = "0.19.2"
chrono = "0.4.19"
clap = { version = "4.2.4", features = ["derive"] }
dirs = "4.0"
flate2 = "1.0.19"
heck = "0.4.0"
pathdiff = "0.2.0"
portpicker = "0.1.1"
regex = "1.8.3"
reqwest = { version = "0.11.4", default-features = false, features = ["multipart", "blocking", "rustls-tls"] }
semver = "1.0.4"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1.0"
solana-client = "1.17.3"
solana-cli-config = "1.17.3"
solana-faucet = "1.17.3"
solana-program = "1.17.3"
solana-sdk = "1.17.3"
# Pin solang-parser because it may break in a backwards incompatible way in minor versions
solang-parser = "=0.3.3"
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
tar = "0.4.35"
toml = "0.7.6"
walkdir = "2.3.2"
