[package]
name = "mainstay-lang-idl"
version = "0.1.1"
authors = ["Mainstay Maintainers <dev.sulaiman@icloud.com>"]
repository = "https://github.com/nxpkg/mainstay"
edition = "2021"
license = "Apache-2.0"
description = "Mainstay framework IDL"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
build = ["regex"]
convert = ["heck", "sha2"]

[dependencies]
mainstay-lang-idl-spec = { path = "./spec", version = "0.1.0" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# `build` feature only
regex = { version = "1", optional = true }

# `convert` feature only
heck = { version = "0.3", optional = true }
sha2 = { version = "0.10", optional = true }
