[package]
name = "mainstay-lang"
version = "0.30.1"
authors = ["Mainstay Maintainers <dev.sulaiman@icloud.com>"]
repository = "https://github.com/nxpkg/mainstay"
edition = "2021"
license = "Apache-2.0"
description = "Solana Sealevel eDSL"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
allow-missing-optionals = ["mainstay-derive-accounts/allow-missing-optionals"]
mainstay-debug = [
    "mainstay-attribute-access-control/mainstay-debug",
    "mainstay-attribute-account/mainstay-debug",
    "mainstay-attribute-constant/mainstay-debug",
    "mainstay-attribute-error/mainstay-debug",
    "mainstay-attribute-event/mainstay-debug",
    "mainstay-attribute-program/mainstay-debug",
    "mainstay-derive-accounts/mainstay-debug"
]
derive = []
event-cpi = ["mainstay-attribute-event/event-cpi"]
idl-build = [
    "mainstay-attribute-account/idl-build",
    "mainstay-attribute-constant/idl-build",
    "mainstay-attribute-event/idl-build",
    "mainstay-attribute-error/idl-build",
    "mainstay-attribute-program/idl-build",
    "mainstay-derive-accounts/idl-build",
    "mainstay-derive-serde/idl-build",
    "mainstay-lang-idl/build",
]
init-if-needed = ["mainstay-derive-accounts/init-if-needed"]
interface-instructions = ["mainstay-attribute-program/interface-instructions"]
lazy-account = ["mainstay-attribute-account/lazy-account", "mainstay-derive-serde/lazy-account"]

[dependencies]
mainstay-attribute-access-control = { path = "./attribute/access-control", version = "0.30.1" }
mainstay-attribute-account = { path = "./attribute/account", version = "0.30.1" }
mainstay-attribute-constant = { path = "./attribute/constant", version = "0.30.1" }
mainstay-attribute-error = { path = "./attribute/error", version = "0.30.1" }
mainstay-attribute-event = { path = "./attribute/event", version = "0.30.1" }
mainstay-attribute-program = { path = "./attribute/program", version = "0.30.1" }
mainstay-derive-accounts = { path = "./derive/accounts", version = "0.30.1" }
mainstay-derive-serde = { path = "./derive/serde", version = "0.30.1" }
mainstay-derive-space = { path = "./derive/space", version = "0.30.1" }

# `mainstay-lang-idl` should only be included with `idl-build` feature
mainstay-lang-idl = { path = "../idl", version = "0.1.1", optional = true }

base64 = "0.21"
bincode = "1"
borsh = "0.10.3"
bytemuck = "1"
solana-program = "2"
thiserror = "1"
