[package]
name = "mainstay-lang-idl-spec"
version = "0.1.0"
authors = ["Mainstay Maintainers <dev.sulaiman@icloud.com>"]
repository = "https://github.com/nxpkg/mainstay"
edition = "2021"
license = "Apache-2.0"
description = "Mainstay framework IDL spec"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
