[package]
name = "mainstay-attribute-account"
version = "0.30.1"
authors = ["Mainstay Maintainers <dev.sulaiman@icloud.com>"]
repository = "https://github.com/nxpkg/mainstay"
license = "Apache-2.0"
description = "Mainstay attribute macro for defining an account"
edition = "2021"

[lib]
proc-macro = true

[features]
mainstay-debug = ["mainstay-syn/mainstay-debug"]
idl-build = ["mainstay-syn/idl-build"]
lazy-account = []

[dependencies]
mainstay-syn = { path = "../../syn", version = "0.30.1", features = ["hash"] }
bs58 = "0.5"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
