[package]
name = "mainstay-attribute-program"
version = "0.30.1"
authors = ["Mainstay Maintainers <dev.sulaiman@icloud.com>"]
repository = "https://github.com/nxpkg/mainstay"
license = "Apache-2.0"
description = "Mainstay attribute macro for defining a program"
edition = "2021"

[lib]
proc-macro = true

[features]
mainstay-debug = ["mainstay-syn/mainstay-debug"]
idl-build = ["mainstay-syn/idl-build"]
interface-instructions = ["mainstay-syn/interface-instructions"]

[dependencies]
mainstay-lang-idl = { path = "../../../idl", version = "0.1.1", features = ["convert"] }
mainstay-syn = { path = "../../syn", version = "0.30.1" }
anyhow = "1"
bs58 = "0.5"
heck = "0.3"
proc-macro2 = "1"
quote = "1"
serde_json = "1"
syn = { version = "1", features = ["full"] }
