[package]
name = "mainstay-derive-serde"
version = "0.30.0"
authors = ["Mainstay Maintainers <accounts@200ms.io>"]
repository = "https://github.com/nxpkg/mainstay"
license = "Apache-2.0"
description = "Mainstay Derive macro for serialization and deserialization"
edition = "2021"

[lib]
proc-macro = true

[features]
idl-build = ["mainstay-syn/idl-build"]

[dependencies]
mainstay-syn = { path = "../../syn", version = "0.30.0" }
borsh-derive-internal = ">=0.9, <0.11"
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
