[package]
name = "mainstay-derive-serde"
version = "0.30.1"
authors = ["Mainstay Maintainers <dev.sulaiman@icloud.com>"]
repository = "https://github.com/nxpkg/mainstay"
license = "Apache-2.0"
description = "Mainstay Derive macro for serialization and deserialization"
edition = "2021"

[lib]
proc-macro = true

[features]
idl-build = ["mainstay-syn/idl-build"]
lazy-account = []

[dependencies]
mainstay-syn = { path = "../../syn", version = "0.30.1" }
borsh-derive-internal = "0.10.3"
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
