[package]
name = "bench"
version = "0.1.0"
description = "Created with Mainstay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["mainstay-lang/idl-build", "mainstay-spl/idl-build"]

[dependencies]
mainstay-lang = { path = "../../../../lang" }
mainstay-spl = { path = "../../../../spl" }
