[package]
name = "declare-id"
version = "0.1.0"
description = "Created with Mainstay"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "declare_id"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["mainstay-lang/idl-build"]

[dependencies]
mainstay-lang = { path = "../../../../lang" }
