[package]
name = "floats"
version = "0.1.0"
description = "Created with Mainstay"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "floats"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["mainstay-lang/idl-build"]

[dependencies]
mainstay-lang = { path = "../../../../lang" }
