[package]
name = "generics"
version = "0.1.0"
description = "Created with Mainstay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "generics"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["mainstay-lang/idl-build", "external/idl-build"]
default = []

[dependencies]
mainstay-lang = { path = "../../../../lang" }
mainstay-spl = { path = "../../../../spl" }
external = { path = "../external", features = ["no-entrypoint"] }
