[package]
name = "registry"
version = "0.1.0"
description = "Created with Mainstay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
mainstay-lang = { path = "../../../../lang" }
mainstay-spl = { path = "../../../../spl" }
lockup = { path = "../lockup", features = ["cpi"] }
