[package]
name = "idl-commands-two"
version = "0.1.0"
description = "Created with Mainstay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "idl_commands_two"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["mainstay-lang/idl-build"]

[dependencies]
mainstay-lang = { path = "../../../../lang" }
