[package]
name = "remaining-accounts"
version = "0.1.0"
description = "Created with Mainstay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "remaining_accounts"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["mainstay-lang/idl-build", "mainstay-spl/idl-build"]

[dependencies]
mainstay-lang = { path = "../../../../lang", features = ["init-if-needed"] }
mainstay-spl = { path = "../../../../spl" }
