[package]
name = "optional"
version = "0.1.0"
description = "Created with Mainstay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "optional"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["mainstay-lang/idl-build"]

[dependencies]
mainstay-lang = { path = "../../../../lang" }
