[package]
name = "realloc"
version = "0.1.0"
description = "Created with Mainstay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "realloc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["mainstay-lang/idl-build"]

[profile.release]
overflow-checks = true

[dependencies]
mainstay-lang = { path = "../../../../lang" }
